objects/FoodOrder__c.object
<CustomObject>
    <description>Object of food orders placed by individuals.</description>
    <fields>
        <fullName>MealTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of mealtype associated with the order.</description>
        <label>Meal Type</label>
        <referenceTo>MealType__c</referenceTo>
        <relationshipLabel>FoodOrders</relationshipLabel>
        <relationshipName>FoodOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Desired Order delivery date/time</description>
        <inlineHelpText>Enter desired Order delivery date/time</inlineHelpText>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Price__c</fullName>
        <description>Total price of the order.</description>
        <inlineHelpText>Total price of the order.</inlineHelpText>
        <label>Order Price</label>
        <summarizedField>FoodOrderDetail__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>FoodOrderDetail__c.FoodOrderId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <description>Total items in the order.</description>
        <label>Total Items</label>
        <summarizedField>FoodOrderDetail__c.Quantity__c</summarizedField>
        <summaryForeignKey>FoodOrderDetail__c.FoodOrderId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of user placing the order.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FoodOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FoodOrder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FoodOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>